 
Changelog for Structure Synth:
------------
6  Nov 10 [MHC] Fixed JavaScript TemplateRender (size+cancel)
				Added BoxFilter, TriangleFilter, GaussianFilter.
 
1  Nov 10 [MHC] Added int sliders to the Variable GUI interface.
[2h]			Made JavaScript-rendering cancellable, fixed Raytrace (Final)
				Fixed StratifiedSampler lens samples.

(Last count: 82h)

31 Oct 10 [MHC] Refactored GUI menus. 
[5h]			Added 'random[-2,3]' for preprocessor generated random numbers (uniform distributed).
				Added 'show coordinate system'.
				JavaScript: fixed relative directory locations. Added Builder.prepend(...)
				Added better raytracing thread termination.

30 Oct 10 [MHC] Fixed memleaks for colors[], fixed GUI reentry
[5h]			Added LensSamples stratification
				Removed Mutex Locks for progressive rendering (because the column rendering was too slow)
				Tried out sRGB conversion and simple exponential 'exposure' tonemapping, but discarded it for now.
				
25 Oct 10 [MHC] Fixed progressive sampling concurrency bug. 
[2h]            New ProgressBox

24 Oct 10 [MHC] Added progressive sampling.
[2h] 

23 Oct 10 [MHC] Fixed sampling bug. Stratified sampling does improve results :-) Only stratifies AA & AO, not Lens samples.
[1h] 

23 Oct 10 [MHC] OBJ exporter is done. Supports Sphere (with adjustable resolution), Box, Mesh, Grid, Line, and Dots. Group by tag or color. No .mat file support.
[2h] 

15 Oct 10 [MHC] Removed old anti-alias code. Added stratified sampling (for AO). No visible effect :-(
[2h]

07 Oct 10 [MHC] More Obj export: added settings dialog.
[1h]

05 Oct 10 [MHC] Added 'Raytrace preview' button. Fixed bug: random seeds are no longer synchronized between threads.
[3h]

04 Oct 10 [MHC] OBJ exporter: now prunes geometry a bit, added normals, groups according to tagging.
[2h]

03 Oct 10 [MHC] Started implementing an OBJ exporter.
[1h]

22 Sep 10 [MHC] Added 'set raytracer::light [x,y,z]' command
				Added 'set perspective-angle <angle>' command (still a bit fuzzy)
